[package]
name = "rustrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
rustograd = { git = "https://github.com/msakuta/rustograd", branch = "master" }
# rustograd = { path = "../rustograd" }
