[package]
name = "rustrol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
eframe = "0.21.1"
rustograd = { git = "https://github.com/msakuta/rustograd", branch = "master" }
# rustograd = { path = "../rustograd" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
